# spatk

./: .gitignore  README.md  pyproject.toml  setup.py
example/: basic.py
examples/: basic.py  manipulation.py  processing.py
spatk/: __init__.py  circuit.py  elements.py  genelems.py  helems.py  helpers.py  ngelems.py  spatk.py  xyelems.py
spatk/flavours/: generic.py  hspice.py  ngspice.py  xyce.py
tests/: helpers.py  test_spatk.py  test_spatk_generic.py  test_spatk_hspice.py  test_spatk_ngspice.py  test_spatk_xyce.py
tests/netlists/: args.sp  complex.sp  lib.sp  simple.sp
tests/netlists/generic/: args.sp  complex.sp
tests/netlists/generic/param/: compare_param.sp  input_param.sp
